[package]
name = "OPCDaclientRs"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for OPC DA Client library with simplified API, async support, and subscription capabilities"
license = "Apache 2.0 "

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
pin-project = "1.0"

[build-dependencies]
anyhow = "1.0"