[package]
name = "OPCDaclientRs"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for OPC DA Client library with simplified API, async support, and subscription capabilities"
license = "Apache 2.0 "

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
pin-project = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [ "Win32_System", "Win32_Foundation","Win32_System_Ole","Win32_System_Com"]}

[build-dependencies]
anyhow = "1.0"